# tree-sitter-gitattributes

./: .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-gitattributes.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gitattributes/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGitAttributes/: gitattributes.h
bindings/swift/TreeSitterGitAttributesTests/: TreeSitterGitAttributesTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: gitattributes.txt
test/highlight/: test.gitattributes
