[package]
name = "tree-sitter-gitattributes"
description = "gitattributes grammar for the tree-sitter parsing library"
version = "0.1.3"
keywords = ["incremental", "parsing", "gitattributes"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ObserverOfTime/tree-sitter-gitattributes"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
